# biome

./: .bldr.toml  .dockerignore  .forkman.yaml  .gitignore  BUILDING.md  CHANGELOG.md  CHANGELOG_FAKE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  END_TO_END_TESTING.md  LICENSE  Makefile  README.md  UX_PRINCIPLES.md  VERIFICATION_TESTING.md  Vagrantfile  build.ps1  docker-compose.yml  e2e_env  e2e_local.sh  e2e_local_raw_command.sh  manifest.json  plan.toml  run-bats.sh  schedule-builder-jobs.sh  update-bio-backline.sh
components/bio/: Cargo.toml  install-linux.sh  install-windows.ps1  install.ps1  install.sh
components/bio/habitat/: plan.ps1  plan.sh
components/bio/habitat/x86_64-darwin/: README.md  plan.sh
components/bio/mac/travis/: mac-build.sh  plan.sh
components/bio/mac/travis/homebrew/: bio-libarchive.rb
components/bio/src/: analytics.rs  cli.rs  config.rs  error.rs  exec.rs  lib.rs  license.rs  main.rs  scaffolding.rs
components/bio/src/cli/: bio.rs  gateway_util.rs
components/bio/src/cli/bio/: bldr.rs  cli.rs  config.rs  file.rs  license.rs  origin.rs  pkg.rs  plan.rs  (+7 more)
components/bio/src/command/: launcher.rs  pkg.rs  sup.rs  supportbundle.rs
components/bio/static/: default_template_plan.ps1  default_template_plan.sh  full_template_plan.ps1  full_template_plan.sh  template_README.md  template_plan.ps1  template_plan.sh
components/bio/tests/: test_install_script.bats  test_install_script.ps1
components/bio/win/: biome.nuspec  chocolateyinstall.ps1
components/builder-api-client/: Cargo.toml
components/builder-api-client/src/: artifactory.rs  builder.rs  error.rs  lib.rs
components/butterfly/: Cargo.toml  README.md
components/butterfly/protocols/: swim.proto
components/butterfly/src/: client.rs  error.rs  lib.rs  main.rs  member.rs  message.rs  rumor.rs  server.rs  trace.rs
components/butterfly/src/rumor/: dat_file.rs  election.rs  heat.rs  mod.rs  service.rs  service_config.rs  service_file.rs
components/butterfly/src/server/: expire.rs  inbound.rs  incarnation_store.rs  mod.rs  outbound.rs  pull.rs  push.rs
components/butterfly/tests/: integration.rs
components/butterfly/tests/common/: mod.rs
components/butterfly/tests/encryption/: mod.rs
components/butterfly/tests/rumor/: departure.rs  election.rs  service_config.rs  service_file.rs
components/http-client/: Cargo.toml
components/http-client/src/: api_client.rs  error.rs  lib.rs  proxy.rs
components/launcher/: Cargo.toml  README.md
components/launcher-client/: Cargo.toml
components/launcher-client/src/: client.rs  error.rs  lib.rs
components/launcher-protocol/: Cargo.toml
components/launcher/habitat/: plan.ps1  plan.sh
components/launcher/src/: error.rs  lib.rs  main.rs  server.rs  service.rs
components/launcher/src/server/: mod.rs
components/pkg-export-container/: Cargo.toml  build.rs
components/pkg-export-container/defaults/: Dockerfile.hbs  Dockerfile_win.hbs
components/pkg-export-container/habitat/: plan.ps1  plan.sh
components/pkg-export-container/src/: accounts.rs  build.rs  cli.rs  container.rs  engine.rs  graph.rs  lib.rs  main.rs  naming.rs  rootfs.rs  util.rs
components/pkg-export-docker/: Cargo.toml  build.rs
components/pkg-export-docker/defaults/: Dockerfile.hbs  Dockerfile_win.hbs
components/pkg-export-docker/habitat/: plan.ps1  plan.sh
components/pkg-export-docker/src/: accounts.rs  build.rs  chmod.rs  cli.rs  docker.rs  graph.rs  lib.rs  main.rs  util.rs
components/pkg-export-helm/: Cargo.toml
components/pkg-export-helm/defaults/: HelmDeps.hbs
components/pkg-export-helm/habitat/: plan.sh
components/pkg-export-helm/src/: chart.rs  deps.rs  main.rs
components/pkg-export-kubernetes/: Cargo.toml
components/pkg-export-kubernetes/defaults/: KubernetesManifest.hbs
components/pkg-export-kubernetes/habitat/: plan.sh
components/pkg-export-kubernetes/src/: cli.rs  error.rs  lib.rs  main.rs  manifest.rs
components/pkg-export-kubernetes/tests/: KubernetesManifestTest.yaml  KubernetesManifestTestBinds.yaml  KubernetesManifestTestEnvironment.yaml  KubernetesManifestTestPersistentStorage.yaml
components/pkg-export-tar/: Cargo.toml
components/pkg-export-tar/habitat/: plan.ps1  plan.sh
components/pkg-export-tar/src/: build.rs  cli.rs  lib.rs  main.rs
components/rst-reader/: Cargo.toml  README.md
components/rst-reader/src/: error.rs  main.rs
components/sup/: Cargo.toml  build.rs
components/sup-client/: Cargo.toml
components/sup-client/src/: lib.rs
components/sup-protocol/: Cargo.toml
components/sup-protocol/protocols/: types.proto
components/sup-protocol/src/: codec.rs  ctl.rs  lib.rs  types.rs
components/sup/doc/: api.raml  http_gateway_butterfly_schema.json  http_gateway_census_schema.json  http_gateway_services_schema.json  render_context_schema.json
components/sup/habitat/: plan.ps1  plan.sh
components/sup/protocols/: event.proto
components/sup/src/: census.rs  cli.rs  config.rs  ctl_gateway.rs  error.rs  event.rs  http_gateway.rs  lib.rs  lock_file.rs  logger.rs  main.rs  manager.rs  subscriber.rs
components/sup/src/command/: shell.rs
components/sup/src/ctl_gateway/: handler.rs  mod.rs  server.rs
components/sup/src/event/: error.rs  nats_message_stream.rs  nitox.rs  ratsio.rs  stream.rs  types.rs
components/sup/src/manager/: action.rs  commands.rs  file_watcher.rs  mod.rs  peer_watcher.rs  self_updater.rs  service.rs  service_updater.rs  spec_dir.rs  spec_watcher.rs  sys.rs  user_config_watcher.rs
components/sup/src/util/: pkg.rs
components/sup/static/: plan.sh
components/sup/tests/: integration.rs
components/sup/tests/fixtures/: sample_render_context.json
components/sup/tests/utils/: bio_root.rs  fixture_root.rs  mod.rs  test_butterfly.rs  test_sup.rs
components/win-users/: Cargo.toml
test-services/test-probe/: Cargo.toml  README.md
test-services/test-probe/habitat/: plan.sh
test-services/test-probe/habitat/x86_64-linux/: plan.sh
test-services/test-probe/habitat/x86_64-windows/: plan.ps1
tools/one-off-release/: Cargo.toml  README.md
tools/one-off-release/src/: main.rs
(+681 files in other folders)
