[package]
name = "bio"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "../build-biome.rs"
workspace = "../../"

[[bin]]
name = "bio"
doc = false

[dependencies]
# Can we keep these alphabetized? We're not savages.
atty = "*"
base64 = "*"
bitflags = "*"
chrono = {version = "*", features = ["serde"]}
dirs = "*"
env_logger = "*"
flate2 = "*"
futures = "0.1"
glob = "*"
biome_api_client = { path = "../builder-api-client" }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome-sup-client = { path = "../sup-client" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
# We need to lock here since v0.30.0 bumps to a version of pest that fails to build on Windows.
handlebars = { version = "0.29.1", default-features = false }
lazy_static = "*"
libc = "*"
log = "*"
pbr = "*"
reqwest = "*"
retry = "*"
same-file = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
tabwriter = "*"
tar = "*"
termcolor = "*"
toml = { version = "*", default-features = false }
url = "*"
walkdir = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.uuid]
version = "*"
features = ["v4"]

[target.'cfg(windows)'.dependencies]
widestring = "*"
winapi = { version = "*", features = ["winuser", "windef"] }
winreg = "*"

[dev-dependencies]
tempfile = "*"

[features]
default = ["supported_targets"]
functional = []
supported_targets = ["biome_core/supported_targets"]
aarch64-linux = ["biome_core/aarch64-linux"]
