[package]
name = "bio"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "../build-biome.rs"
workspace = "../../"

[[bin]]
name = "bio"
doc = false

[dependencies]
# Can we keep these alphabetized? We're not savages.
atty = "*"
base64 = "*"
bitflags = "*"
chrono = {version = "*", features = ["serde"]}
configopt = { git = "https://github.com/davidMcneil/configopt" }
dirs = "*"
env_logger = "*"
flate2 = "*"
futures = { version = "*" }
glob = "*"
biome_api_client = { path = "../builder-api-client" }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome-sup-client = { path = "../sup-client" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
# We need to lock here since v0.30.0 bumps to a version of pest that fails to build on Windows.
handlebars = { version = "0.29.1", default-features = false }
lazy_static = "*"
libc = "*"
log = "*"
pbr = "*"
rants = "*"
# reqwest 0.10.4 significantly increased compile times. The increase was about a 5.5
# times slower on a local environment and resulted in several buildkite timeouts.
# For now we will pin to 0.10.3.
reqwest = { version = "=0.10.3", features = ["blocking", "json", "stream"] }
retry = { git = "https://github.com/habitat-sh/retry", features = ["asynchronous"] }
same-file = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
structopt = "*"
tabwriter = "*"
tar = "*"
termcolor = "*"
tokio = { version = "*", features = ["full"] }
toml = { version = "*", default-features = false }
url = { version = "*", features = ["serde"] }
walkdir = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.uuid]
version = "*"
features = ["v4"]

[target.'cfg(windows)'.dependencies]
widestring = "*"
winapi = { version = "*", features = ["winuser", "windef"] }
winreg = "*"

[dev-dependencies]
tempfile = "*"

[features]
default = ["supported_targets"]
functional = []
supported_targets = ["biome_core/supported_targets"]
aarch64-linux = ["biome_core/aarch64-linux"]
