[package]
name = "biome_api_client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
broadcast = "*"
bytes = "*"
chrono = "*"
env = "*"
futures = "*"
biome_core = { path = "../core" }
biome_http_client = { path = "../http-client" }
log = "*"
pbr = "*"
percent-encoding = "*"
rand = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json", "stream"] }
serde = "*"
serde_derive = "*"
serde_json = { version = "*", features = [ "preserve_order" ] }
tee = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
url = "*"
