[package]
name = "biome_butterfly"
version = "0.1.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[[bin]]
name = "butterfly"
path = "src/main.rs"
doc = false

[dependencies]
byteorder = "*"
bytes = "*"
env_logger = "*"
biome_core = { path = "../core" }
biome_common = { path = "../common" }
log = "*"
lazy_static = "*"
prometheus = "*"
parking_lot = "*"
prost = "*"
prost-derive = "*"
rand = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_json = "*"
tempfile = "*"
time = "*"
threadpool = "*"
toml = { version = "*", default-features = false }
uuid = { version = "*", features = ["v4"] }
zmq = { git = "https://github.com/habitat-sh/rust-zmq", branch = "release/v0.8" }

[dev-dependencies]
mktemp = "*"

[build-dependencies]
heck = "*"
pkg-config = "*"
prost = "*"
prost-build = "*"
tempfile = "*"

[features]
default = ["protocols"]
protocols = []
lock_as_rwlock = ["biome_common/lock_as_rwlock"]
lock_as_mutex = ["biome_common/lock_as_mutex"]
deadlock_detection = ["parking_lot/nightly", "parking_lot/deadlock_detection", "biome_common/deadlock_detection"]
