[package]
name = "biome_butterfly"
version = "0.1.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[[bin]]
name = "butterfly"
path = "src/main.rs"
doc = false

[dependencies]
byteorder = "*"
bytes = "*"
env_logger = "*"
biome_core = { path = "../core" }
biome_common = { path = "../common" }
log = "*"
lazy_static = "*"
prometheus = "*"
parking_lot = "*"
# Must use fork see https://github.com/habitat-sh/habitat/issues/7270
prost = { git = "https://github.com/habitat-sh/prost" }
# Must use fork see https://github.com/habitat-sh/habitat/issues/7270
prost-derive = { git = "https://github.com/habitat-sh/prost" }
rand = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_json = "*"
tempfile = "*"
time = "*"
threadpool = "*"
toml = { version = "*", default-features = false }
uuid = { version = "*", features = ["v4"] }
zmq = { git = "https://github.com/habitat-sh/rust-zmq", branch = "v0.8-symlinks-removed" }

[dev-dependencies]
mktemp = "*"

[build-dependencies]
heck = "*"
pkg-config = "*"
# Must use fork see https://github.com/habitat-sh/habitat/issues/7270
prost = { git = "https://github.com/habitat-sh/prost" }
# Must use fork see https://github.com/habitat-sh/habitat/issues/7270
prost-build = { git = "https://github.com/habitat-sh/prost" }
tempfile = "*"

[features]
default = ["protocols"]
protocols = []
lock_as_rwlock = ["biome_common/lock_as_rwlock"]
lock_as_mutex = ["biome_common/lock_as_mutex"]
deadlock_detection = ["parking_lot/nightly", "parking_lot/deadlock_detection", "biome_common/deadlock_detection"]
