[package]
name = "biome_http_client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[dependencies]
base64 = "*"
log = "*"
native-tls = "*"
httparse = "*"
reqwest = { version = "*", features = ["blocking", "json"] } 
env_proxy = "*"
serde = "*"
serde_json = "*"
url = "*"

[dependencies.biome_core]
path = "../core"

[features]
default = []
functional = []
