[package]
name = "biome_http_client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[dependencies]
base64 = "*"
log = "*"
native-tls = { version = "*", features = ["vendored"] }
pem = "*"
httparse = "*"
reqwest = { version = "*", features = ["blocking", "json", "stream"] }
env_proxy = { git = "https://github.com/inejge/env_proxy.git" }
serde = "*"
serde_json = { version = "*", features = [ "preserve_order" ] }
url = "*"

[dependencies.biome_core]
path = "../core"

[dev-dependencies]
tempfile = "*"

[features]
default = []
functional = []
