[package]
name = "biome_http_client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
base64 = "*"
log = "^0.4.11"
native-tls = { version = "*", features = ["vendored"] }
pem = "*"
httparse = "*"
reqwest = { version = "*", features = ["blocking", "json", "stream"] }
env_proxy = "*"
serde = "*"
serde_json = { version = "*", features = [ "preserve_order" ] }
url = "*"

[dependencies.biome_core]
path = "../core"

[dev-dependencies]
tempfile = "*"

[features]
default = []
functional = []
