[package]
name = "biome-launcher-client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
bincode = "*"
env_logger = "*"
biome_core = { path = "../core" }
biome-launcher-protocol = { path = "../launcher-protocol" }
biome_common = { path = "../common" }
ipc-channel = { git = "https://github.com/habitat-sh/ipc-channel", branch = "hbt-windows" }
libc = "*"
log = "*"
prost = "*"
serde = "*"
