[package]
name = "biome-launcher-protocol"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[dependencies]
bytes = "*"
prost = "*"
prost-derive = "*"
serde = "*"
serde_derive = "*"

[build-dependencies]
prost-build = "*"
