[package]
name = "biome-launcher"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[[bin]]
name = "bio-launch"
path = "src/main.rs"
doc = false

[dependencies]
env_logger = "*"
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome-launcher-protocol = { path = "../launcher-protocol" }
ipc-channel = { git = "https://github.com/habitat-sh/ipc-channel", branch = "hbt-windows" }
libc = "*"
log = "*"
prost = "*"
semver = "*"

[target.'cfg(not(windows))'.dependencies]
nix = "*"

[target.'cfg(windows)'.dependencies]
winapi =  { version = "*", features = ["tlhelp32"] }
