[package]
name = "biome_pkg_export_docker"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "build.rs"
workspace = "../../"

[lib]
name = "biome_pkg_export_docker"

[[bin]]
name = "bio-pkg-export-docker"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "*"
clap = { version = "*", features = ["suggestions", "color", "unstable"] }
chrono = "*"
env_logger = "*"
bio = { path = "../bio" }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
# We need to lock here since v0.30.0 bumps to a version of pest that fails to build on Windows.
handlebars = { version = "0.29.1", default-features = false }
lazy_static = "*"
log = "*"
rusoto_core = "*"
rusoto_credential = "*"
rusoto_ecr = "*"
serde = { version = "*", features = ["rc"] }
serde_json = "*"
tempfile = "*"
termcolor = "*"
url = "*"
failure = "*"
failure_derive = "*"

[features]
default = []
functional = []
