[package]
name = "biome_pkg_export_helm"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "../build-biome.rs"
workspace = "../../"

[[bin]]
name = "bio-pkg-export-helm"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "*", features = ["suggestions", "color", "unstable"] }
env_logger = "*"
biome_core = { path = "../core" }
biome_common = { path = "../common" }
biome_pkg_export_docker = { path = "../pkg-export-docker" }
biome_pkg_export_kubernetes = { path = "../pkg-export-kubernetes" }
# We need to lock here since v0.30.0 bumps to a version of pest that fails to build on Windows.
handlebars = { version = "0.29.1", default-features = false }
lazy_static = "*"
log = "*"
serde = "*"
serde_json = "*"
failure = "*"
failure_derive = "*"
url = "*"

[features]
default = []
functional = []
