[package]
name = "biome_pkg_export_kubernetes"
version = "0.0.0"
edition = "2018"
authors = ["Krzesimir Nowak <krzesimir@kinvolk.io>",
           "Zeeshan Ali <zeeshan@kinvolk.io>"]
build = "../build-biome.rs"
workspace = "../../"

[lib]
name = "biome_pkg_export_kubernetes"

[[bin]]
name = "bio-pkg-export-kubernetes"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "*"
clap = { version = "*", features = ["suggestions", "color", "unstable"] }
env_logger = "*"
biome_core = { path = "../core" }
biome_common = { path = "../common" }
biome_pkg_export_docker = { path = "../pkg-export-docker" }
# We need to lock here since v0.30.0 bumps to a version of pest that fails to build on Windows.
handlebars = { version = "0.29.1", default-features = false }
log = "*"
serde = "*"
serde_json = "*"
failure = "*"
failure_derive = "*"

[features]
default = []
functional = []
