[package]
name = "biome_pkg_export_tar"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[lib]
name = "biome_pkg_export_tar"

[[bin]]
name = "bio-pkg-export-tar"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "*"
clap = { git = "https://github.com/habitat-sh/clap.git", branch = "v2-master", features = ["suggestions", "color", "unstable"] }
env_logger = "*"
biome_common = { path = "../common" }
biome_core = { path = "../core" }
# We need to lock here since v0.30.0 bumps to a version of pest that fails to build on Windows.
handlebars = { version = "0.29.1", default-features = false }
lazy_static = "*"
log = "*"
mktemp = "*"
serde = { version = "*", features = ["rc"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
url = "*"
failure = "*"
failure_derive = "*"
tempfile = "*"
tar = "*"
flate2 = "*"
