[package]
name = "biome-sup-client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
futures = { version = "*" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
biome_common = { path = "../common" }
log = "*"
prost = "*"
termcolor = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
