[package]
name = "biome-sup-client"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
futures = { version = "*" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
log = "^0.4.11"
prost = "*"
rustls = "*"
termcolor = "*"
tokio = { version = "^0.2", features = ["full"] }
tokio-util = { version = "^0.3", features = ["full"] }
