[package]
name = "biome-sup-protocol"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "./build.rs"
workspace = "../../"

[dependencies]
base64 = "*"
bytes = "*"
futures = "*"
biome_core = { path = "../core" }
lazy_static = "*"
log = "*"
prost = "*"
prost-derive = "*"
rand = "*"
serde = "*"
serde_derive = "*"
tokio = "*"
tokio-codec = "*"

[build-dependencies]
heck = "*"
prost = "*"
prost-build = "*"
prost-types = "*"
tempfile = "*"

[dev-dependencies]
tempfile = "*"
toml = "*"

[features]
default = ["protocols"]
protocols = []

