[package]
name = "biome-sup-protocol"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "./build.rs"
workspace = "../../"

[dependencies]
base64 = "*"
bytes = "*"
configopt = { git = "https://github.com/davidMcneil/configopt" }
biome_core = { path = "../core" }
lazy_static = "*"
log = "*"
prost = "*"
prost-derive = "*"
rand = "*"
serde = "*"
serde_derive = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }

[build-dependencies]
heck = "*"
prost = "*"
prost-build = "*"
prost-types = "*"
tempfile = "*"

[dev-dependencies]
tempfile = "*"
toml = "*"

[features]
default = ["protocols"]
protocols = []

