[package]
name = "biome-sup-protocol"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "./build.rs"
workspace = "../../"

[dependencies]
base64 = "*"
bytes = "*"
biome_core = { path = "../core" }
lazy_static = "^1.4.0"
log = "^0.4.11"
prost = "*"
prost-derive = "*"
rand = "*"
serde = "*"
serde_derive = "*"
tokio = { version = "^0.2", features = ["full"] }
tokio-util = { version = "^0.3", features = ["full"] }

[build-dependencies]
prost-build = "*"

[dev-dependencies]
tempfile = "*"
toml = { version = "*", features = [ "preserve_order" ] }
