[package]
name = "biome_sup"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "./build.rs"
workspace = "../../"

[lib]
name = "biome_sup"

[[bin]]
name = "bio-sup"
path = "src/main.rs"
doc = false

[dependencies]
bytes = "*"
actix-web = { version = "*", default-features = false, features = [ "rust-tls" ] }
byteorder = "*"
clap = { version = "*", features = [ "suggestions", "color", "unstable" ] }
cpu-time = "*"
futures = "*"
glob = "*"
bio = { path = "../bio" }
biome_butterfly = { path = "../butterfly", default-features = false }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome_api_client = { path = "../builder-api-client" }
biome-launcher-client = { path = "../launcher-client" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
lazy_static = "*"
# Temporarily pin libc. The palaver crate uses the shorthand for semver compatible updates,
# but the libc crate changed the types of some of the consts and functions it provides.
# This pin can be removed once a release with https://github.com/alecmocatta/palaver/pull/15
# and https://github.com/alecmocatta/palaver/pull/16 merged is made.
libc = "= 0.2.54" 
log = "*"
log4rs = "*"
nats = { git = "https://github.com/habitat-sh/rust-nats" }
notify = "*"
num_cpus = "*"
parking_lot = "*"
prometheus = "*"
prost = "*"
prost-derive = "*"
prost-types = "0.5.0" # This is current stable, but for some reason gets pulled in as 0.4.0 if we use "*" (2019-03-28)
rand = "*"
regex = "*"
rustls = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
serde-transcode = "*"
state = "*"
tempfile = "*"
termcolor = "*"
time = "*"
toml = { version = "*", default-features = false }
tokio = "*"
tokio-core = "*"
tokio-codec = "*"
tokio-timer = "*"
url = "*"
valico = "*"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "*"

[target.'cfg(target_family = "unix")'.dependencies]
# palaver's default features require nightly; see https://github.com/alecmocatta/palaver/blob/master/Cargo.toml
palaver = { version = "*", default-features = false }
jemallocator = "*"
jemalloc-ctl = "*"

[target.'cfg(windows)'.dependencies]
ctrlc = "*"
winapi =  { version = "*", features = ["tlhelp32"] }

[dev-dependencies]
biome_core = { path = "../core" }
hyper = "*"
json = "*"

[build-dependencies]
prost-build = "*"

[features]
default = []
apidocs = []
ignore_integration_tests = []
lock_as_rwlock = ["biome_common/lock_as_rwlock"]
lock_as_mutex = ["biome_common/lock_as_mutex"]
