[package]
name = "biome_sup"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
build = "./build.rs"
workspace = "../../"

[lib]
name = "biome_sup"

[[bin]]
name = "bio-sup"
path = "src/main.rs"
doc = false

[dependencies]
bytes = "*"
actix-web = { version = "*", default-features = false, features = [ "rust-tls" ] }
byteorder = "*"
clap = { version = "*", features = [ "suggestions", "color", "unstable" ] }
cpu-time = "*"
futures = "0.1"
glob = "*"
bio = { path = "../bio" }
biome_butterfly = { path = "../butterfly", default-features = false }
biome_common = { path = "../common" }
biome_core = { path = "../core" }
biome_api_client = { path = "../builder-api-client" }
biome_http_client = { path = "../http-client" }
biome-launcher-client = { path = "../launcher-client" }
biome-sup-protocol = { path = "../sup-protocol", default-features = false }
lazy_static = "*"
libc = "*"
log = "*"
log4rs = "*"
nats = { git = "https://github.com/habitat-sh/rust-nats", rev = "a4c24be66fc54c0038af383b6df18d2ed0b5f376" }
notify = "*"
num_cpus = "*"
parking_lot = "*"
prometheus = "*"
prost = "*"
prost-derive = "*"
prost-types = "0.5.0" # This is current stable, but for some reason gets pulled in as 0.4.0 if we use "*" (2019-03-28)
rand = "*"
regex = "*"
rustls = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
serde-transcode = "*"
state = "*"
tempfile = "*"
termcolor = "*"
time = "*"
toml = { version = "*", default-features = false }
tokio = "*"
tokio-core = "*"
tokio-codec = "*"
tokio-timer = "*"
url = "*"
valico = "*"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "*"

[target.'cfg(target_family = "unix")'.dependencies]
jemallocator = "*"
jemalloc-ctl = "*"

[target.'cfg(windows)'.dependencies]
ctrlc = "*"
mio-named-pipes = "*"
mio = "*"
uuid = { version = "*", features = ["v4"] }
winapi =  { version = "*", features = ["namedpipeapi", "tlhelp32"] }

[dev-dependencies]
biome_core = { path = "../core" }
hyper = "*"
json = "*"

[build-dependencies]
prost-build = "*"

[features]
default = []
apidocs = []
ignore_integration_tests = []
lock_as_rwlock = ["biome_common/lock_as_rwlock"]
lock_as_mutex = ["biome_common/lock_as_mutex"]
