[package]
name = "biome_win_users"
version = "0.0.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome library for win32 account api calls"
workspace = "../../"
build = "build.rs"

[build-dependencies]
cc = "*"

[dependencies]
log = "*"

[target.'cfg(windows)'.dependencies]
widestring = "*"
winapi = { version = "*", features = ["winbase", "winerror", "handleapi", "sddl"] }
