[package]
name = "test-probe"
version = "0.1.0"
edition = "2018"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"

[dependencies]
actix-rt = "*"
actix-web = { version = "*", default-features = false, features = [ "rustls" ] }
clap = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = "*"
