[package]
name = "one-off-release"
version = "0.1.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "A tool to copy packages from builder acceptance to live."
edition = "2018"
workspace = "../../"

[dependencies]
env_logger = "*"
lazy_static = "*"
log = "*"
structopt = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json"] } 